--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inicio</title>
+    <title>Primera pagina</title>
 </head>
 <body>
-    <h1>Hola</h1>
+    <h1>PAGINA 1</h1>
 </body>
 </html>
